<resources>
    <string name="app_name">Restaurant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="add">Add</string>
    <string name="favourite_fragment">Favourite Fragment</string>
    <string name="details_fragment">details fragment</string>
    <string name="list">List</string>
    <string name="android_restaurant_project">Android Restaurant Project</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="change_profile_data">Change profile data</string>
    <string name="address">Address</string>
    <string name="Insert_your_data" />
    <string name="restaurant">Restaurant</string>
</resources>